Kotlin language extensions + unstructured logging adapter

--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -2,12 +2,12 @@
 jdk = "17"
 kotlin = "2.0.0"
 
-forkhandles = "2.19.0.0"
-http4k = "5.26.0.0"
+forkhandles = "2.20.0.0"
+http4k = "5.28.0.0"
 jackson = "2.17.2"
 jgit = "6.10.0.202406032230-r"
-junit = "5.10.3"
-slf4j = "2.0.13"
+junit = "5.11.0"
+slf4j = "2.0.16"
 
 jib = "3.4.3"
 
@@ -26,6 +26,8 @@ kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version.ref =
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
 slf4j-jcl = { module = "org.slf4j:jcl-over-slf4j", version.ref = "slf4j" }
 slf4j-jul = { module = "org.slf4j:jul-to-slf4j", version.ref = "slf4j" }
+slf4j-log4j = { module = "org.slf4j:log4j-over-slf4j", version.ref = "slf4j" }
+slf4j-nop = { module = "org.slf4j:slf4j-nop", version.ref = "slf4j" }
 
 [plugins]
 jib = { id = "com.google.cloud.tools.jib", version.ref = "jib" }
