--- a/gradle.properties
+++ b/gradle.properties
@@ -5,3 +5,4 @@ org.gradle.configureondemand=true
 org.gradle.parallel=true
 org.gradle.warning.mode=all
 org.gradle.welcome=never
+org.gradle.logging.level=quiet
